@@ -10,6 +10,14 @@
 #include <bsp/bootcard.h>
 #include <stdint.h>
 
+/*
+ *  These are provided by the linkcmds for ALL of the BSPs which use this file.
+ */
+extern char RamBase[];
+extern char WorkAreaBase[];
+extern char HeapSize[];
+extern char RamSize[];
+
 #if defined(HAS_UBOOT)
   extern bd_t *uboot_bdinfo_ptr;
 #endif
@@ -31,12 +39,12 @@ void bsp_get_work_area(
     char *ram_end = (char *) uboot_bdinfo_ptr->bi_memstart +
                                  uboot_bdinfo_ptr->bi_memsize;
   #else /* HAS_UBOOT */
-    char *ram_end = bsp_ram_end;
+    char *ram_end = (uintptr_t)RamBase + (uintptr_t)RamSize;
   #endif /* HAS_UBOOT */
 
   *work_area_start = bsp_work_area_start;
   *work_area_size = ram_end - bsp_work_area_start;
   *heap_start = BSP_BOOTCARD_HEAP_USES_WORK_AREA;
-  *heap_size = BSP_BOOTCARD_HEAP_SIZE_DEFAULT;
+  *heap_size = HeapSize;
 }
 
