@@ -22,6 +22,10 @@ bsp_dpram_size = LENGTH (DPRAM);
 
 bsp_section_align = 32;
 
+RamBase = bsp_ram_start;
+RamSize = bsp_ram_size;
+HeapSize = DEFINED(HeapSize) ? HeapSize : 0x0;
+
 SECTIONS {
 	/*
 	 * BSP: MPC5200 registers
@@ -268,6 +272,7 @@ SECTIONS {
 	 * BSP: Work area start
 	 */
 	bsp_work_area_start = .;
+        WorkAreaBase = .;
 	
 	/* Stabs debugging sections.  */
 	.stab          0 : { *(.stab) }
