@@ -1,5 +1,11 @@
 2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* startup/bspgetworkarea.c, startup/linkcmds.base: Do some prep work in
+	anticipation of gen5200 and gen83xx being able to shared
+	bsp_get_work_area() implementation.
+
+2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* Makefile.am, startup/bspstart.c: Add use of bsp_get_work_area() in
 	its own file and rely on BSP Framework to perform more
 	initialization. Remove unnecessary includes of rtems/libio.h and
